WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55389
Web Inspector: [REGRESSION] no resources in scripts panel because debugger is enabled too early
https://bugs.webkit.org/show_bug.cgi?id=55389
Summary
Web Inspector: [REGRESSION] no resources in scripts panel because debugger is...
Pavel Podivilov
Reported
2011-02-28 11:21:09 PST
Web Inspector: [REGRESSION] no resources in scripts panel because debugger is enabled too early
Attachments
Patch.
(2.56 KB, patch)
2011-02-28 11:22 PST
,
Pavel Podivilov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Podivilov
Comment 1
2011-02-28 11:22:34 PST
Created
attachment 84086
[details]
Patch.
Pavel Feldman
Comment 2
2011-02-28 11:30:22 PST
Comment on
attachment 84086
[details]
Patch. Clearing flags on attachment: 84086 Committed
r79887
: <
http://trac.webkit.org/changeset/79887
>
Pavel Feldman
Comment 3
2011-02-28 11:30:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug