2011-02-28  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] no resources in scripts panel because debugger is enabled too early.
        https://bugs.webkit.org/show_bug.cgi?id=55389

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::populateScriptObjects):
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::setFrontend):
        (WebCore::InspectorDebuggerAgent::enableDebuggerAfterShown):
        * inspector/InspectorDebuggerAgent.h:

Canonical link: https://commits.webkit.org/69804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79887 268f45cc-cd09-0410-ab3c-d52691b4dbfc