Source/WebCore/inspector/InspectorDebuggerAgent.h
@@ -72,6 +72,7 @@ public:
     bool enabled();
     void restore();
     void setFrontend(InspectorFrontend*);
+    void enableDebuggerAfterShown();
     void clearFrontend();
 
     void inspectedURLChanged(const String& url);
